adding content to timeline

--- a/bio.html
+++ b/bio.html
@@ -56,12 +56,11 @@
 
         </div>
         <div class="timeline-content">
-          <h2>Cesar is born!</h2>
+          <h2>Cesar is Born! 1968</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+            Born in Passaic, New Jersey.
           </p>
-          <a href="#" class="btn">button</a>
+          <!-- <a href="#" class="btn">button</a> -->
         </div>
       </div>
 
@@ -81,9 +80,10 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>Year</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Family moves to Washington Heights. Starts roller skating, figure skating, color guard, and twriling of batons and props.
+
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -102,9 +102,9 @@
       </div>
 
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>Year - 1981</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Attended and excelled in the arts program at PS 189. Did vocal, guitar, drama and art
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -125,10 +125,9 @@
 
         </div>
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2> Year</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+            In junior high school ( JHS 243), Cesar stayled changed to punk rock and started going to uptown rave parties and riverside jams. 
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -150,9 +149,9 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1983 - Vogue</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Cesar goes to the West Side Christopher Street Piers and discovers vogue dance, he starts dancing.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -171,9 +170,9 @@
       </div>
 
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1984 - Meeting Mentors</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Cesar gets introduces to early vogue mentors: Willie Ninja and Michael Xtravaganza.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -194,10 +193,9 @@
 
         </div>
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1985</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+            House Music all night long
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -219,9 +217,9 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>Recruited</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Recruited by Willie Ninja.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -240,9 +238,10 @@
       </div>
 
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1987</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            The early club days. better days, track.
+            Cesar becomes popular for his signature style of vogueing, popping, dipping, and spinning with grace and precision. He also walked his first ball. Recrutie as the..... Was featured in The Village Voice and The Latin Connection.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -263,10 +262,9 @@
 
         </div>
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1989</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+            The love.... Toured the world with Malcolm Mclauren. Featured in Pazzo Magazine and Nightlife Magazine. Made cameos in 'Paris is Burning' and 'The House of Tres' documentary. He was also the first time choreographer for Miss Continental USA contestants competing in Chicago.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -288,9 +286,79 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1990</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+            Stays activce in Ballroom scene.
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+        <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+        c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+        l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+      c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+      c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+      </svg>https://open.spotify.com/artist/1qto4hHid1P71emI6Fd8xi
+      </div>
+
+        <div class="timeline-content">
+          <h2>1991</h2>
+          <p>
+            Presented with the Marcel Christian Legend Award.
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+    </div>
+
+<!-- New Section -->
+
+    <div id="timeline">
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+          c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+          l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+          c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+          c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+          </svg>
+
+        </div>
+        <div class="timeline-content">
+          <h2>1993</h2>
+          <p>
+            Walked and won many balls. Began to model and dance professionally. Decided to focus on a career in research and left the ballroom scene.
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <g>
+          <path fill="#FFFFFF" d="M17.92,3.065l-1.669-2.302c-0.336-0.464-0.87-0.75-1.479-0.755C14.732,0.008,7.653,0,7.653,0v5.6
+          c0,0.096-0.047,0.185-0.127,0.237c-0.081,0.052-0.181,0.06-0.268,0.02l-1.413-0.64C5.773,5.183,5.69,5.183,5.617,5.215l-1.489,0.65
+          c-0.087,0.038-0.19,0.029-0.271-0.023c-0.079-0.052-0.13-0.141-0.13-0.235V0H2.191C1.655,0,1.233,0.434,1.233,0.97
+          c0,0,0.025,15.952,0.031,15.993c0.084,0.509,0.379,0.962,0.811,1.242l2.334,1.528C4.671,19.905,4.974,20,5.286,20h10.307
+          c1.452,0,2.634-1.189,2.634-2.64V4.007C18.227,3.666,18.12,3.339,17.92,3.065z M16.42,17.36c0,0.464-0.361,0.833-0.827,0.833H5.341
+          l-1.675-1.089h10.341c0.537,0,0.953-0.44,0.953-0.979V2.039l1.459,2.027V17.36L16.42,17.36z"/>
+        </g>
+        </svg>
+        </div>
+
+        <div class="timeline-content right">
+          <h2>1994 </h2>
+          <p>
+            Carmen Electra, K7 music video, and Toni Braxton Video.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -309,18 +377,154 @@
       </div>
 
         <div class="timeline-content">
-          <h2>LOREM IPSUM DOLOR</h2>
+          <h2>1995</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+           Enrolls in professional dance classes.
           </p>
           <a href="#" class="btn">button</a>
         </div>
       </div>
     </div>
 
+    <div id="timeline">
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+          c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+          l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+          c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+          c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+          </svg>
 
+        </div>
+        <div class="timeline-content">
+          <h2>1995-2006</h2>
+          <p>
+            Modeled and dance professionally. 
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
 
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <g>
+          <path fill="#FFFFFF" d="M17.92,3.065l-1.669-2.302c-0.336-0.464-0.87-0.75-1.479-0.755C14.732,0.008,7.653,0,7.653,0v5.6
+          c0,0.096-0.047,0.185-0.127,0.237c-0.081,0.052-0.181,0.06-0.268,0.02l-1.413-0.64C5.773,5.183,5.69,5.183,5.617,5.215l-1.489,0.65
+          c-0.087,0.038-0.19,0.029-0.271-0.023c-0.079-0.052-0.13-0.141-0.13-0.235V0H2.191C1.655,0,1.233,0.434,1.233,0.97
+          c0,0,0.025,15.952,0.031,15.993c0.084,0.509,0.379,0.962,0.811,1.242l2.334,1.528C4.671,19.905,4.974,20,5.286,20h10.307
+          c1.452,0,2.634-1.189,2.634-2.64V4.007C18.227,3.666,18.12,3.339,17.92,3.065z M16.42,17.36c0,0.464-0.361,0.833-0.827,0.833H5.341
+          l-1.675-1.089h10.341c0.537,0,0.953-0.44,0.953-0.979V2.039l1.459,2.027V17.36L16.42,17.36z"/>
+        </g>
+        </svg>
+        </div>
 
+        <div class="timeline-content right">
+          <h2>1995-2013</h2>
+          <p>
+            Worked as a choreographer, dancer, and clothing designer for beauty pageant contestants and female impersonators.
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+        <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+        c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+        l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+      c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+      c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+      </svg>
+      </div>
+
+        <div class="timeline-content">
+          <h2>2010</h2>
+          <p>
+            Taught first vogue class at Peridance.
+            Began working in the wardrobe department at Alvin Ailey. 
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+    </div>
+
+    <div id="timeline">
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+          c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+          l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+          c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+          c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+          </svg>
+
+        </div>
+        <div class="timeline-content">
+          <h2>2011</h2>
+          <p>
+            Becomes faculty at Peridance. 
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+          <g>
+          <path fill="#FFFFFF" d="M17.92,3.065l-1.669-2.302c-0.336-0.464-0.87-0.75-1.479-0.755C14.732,0.008,7.653,0,7.653,0v5.6
+          c0,0.096-0.047,0.185-0.127,0.237c-0.081,0.052-0.181,0.06-0.268,0.02l-1.413-0.64C5.773,5.183,5.69,5.183,5.617,5.215l-1.489,0.65
+          c-0.087,0.038-0.19,0.029-0.271-0.023c-0.079-0.052-0.13-0.141-0.13-0.235V0H2.191C1.655,0,1.233,0.434,1.233,0.97
+          c0,0,0.025,15.952,0.031,15.993c0.084,0.509,0.379,0.962,0.811,1.242l2.334,1.528C4.671,19.905,4.974,20,5.286,20h10.307
+          c1.452,0,2.634-1.189,2.634-2.64V4.007C18.227,3.666,18.12,3.339,17.92,3.065z M16.42,17.36c0,0.464-0.361,0.833-0.827,0.833H5.341
+          l-1.675-1.089h10.341c0.537,0,0.953-0.44,0.953-0.979V2.039l1.459,2.027V17.36L16.42,17.36z"/>
+        </g>
+        </svg>
+        </div>
+
+        <div class="timeline-content right">
+          <h2>2014</h2>
+          <p>
+            Recieves the 'Red Era of Ballroom Icon Award'. Teaches first offical Vogue class at Alvin Ailey. Travels the world and teaches workshops in Berlin, Sao Paulo, and the Dominican Republic.
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
+        <path fill="#FFFFFF" d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+        c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+        l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+      c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+      c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"/>
+      </svg>
+      </div>
+
+        <div class="timeline-content">
+          <h2>2015</h2>
+          <p>
+            Recieved the 'Heritage Gatekeeper Award' and the 'House of Infinity Paved the Way Award'
+          </p>
+          <a href="#" class="btn">button</a>
+        </div>
+      </div>
+    </div>
+
+   
+      
   </div>
 
 
