--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>Year</h2>
+          <h2>Year - 1974</h2>
           <p>
             Family moves to Washington Heights. Starts roller skating, figure skating, color guard, and twriling of batons and props.
 
@@ -125,9 +125,9 @@
 
         </div>
         <div class="timeline-content">
-          <h2> Year</h2>
+          <h2> Year - 1982</h2>
           <p>
-            In junior high school ( JHS 243), Cesar stayled changed to punk rock and started going to uptown rave parties and riverside jams. 
+            In junior high school ( JHS 143), Cesar style changed to punk rock and started going to uptown rave parties and riverside jams. 
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -151,7 +151,7 @@
         <div class="timeline-content right">
           <h2>1983 - Vogue</h2>
           <p>
-            Cesar goes to the West Side Christopher Street Piers and discovers vogue dance, he starts dancing.
+            Cesar goes to the West Side Christopher Street Piers for the first time and discovers vogue dance, immediately starts learning the craft.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -172,7 +172,7 @@
         <div class="timeline-content">
           <h2>1984 - Meeting Mentors</h2>
           <p>
-            Cesar gets introduces to early vogue mentors: Willie Ninja and Michael Xtravaganza.
+            Cesar gets introduced to early vogue mentors: Willie Ninja and Little Michael Xtravaganza.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -193,9 +193,9 @@
 
         </div>
         <div class="timeline-content">
-          <h2>1985</h2>
+          <h2>Year - 1985</h2>
           <p>
-            House Music all night long
+            House Music enters the dancing scene, inspries Cesar to create his own signature sytle of Vogue.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -217,9 +217,9 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>Recruited</h2>
+          <h2>Recruited - 1986</h2>
           <p>
-            Recruited by Willie Ninja.
+            Recruited by Willie Ninja to be a member of the House of Ninja.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -240,8 +240,7 @@
         <div class="timeline-content">
           <h2>1987</h2>
           <p>
-            The early club days. better days, track.
-            Cesar becomes popular for his signature style of vogueing, popping, dipping, and spinning with grace and precision. He also walked his first ball. Recrutie as the..... Was featured in The Village Voice and The Latin Connection.
+            The early club days begin at nightclubs such as 'Better Days' and 'Tracks'. Cesar becomes popular for his signature style of voguing, popping, dipping, and spinning with grace and precision. He walks his first ball, the 'Paris is Buring' Ball and wins. Recrutied as the Father of the House of Magnifique, with the blessing of Willi Ninja. He was featured in 'The Village Voice', in the first ever article about the Harlem Drag Ballroom Scene, and principle dancer on 'The Latin Connection' on television.
           </p>
           <a href="#" class="btn">button</a>
         </div>
