--- a/bio.html
+++ b/bio.html
@@ -238,9 +238,11 @@
       </div>
 
         <div class="timeline-content">
-          <h2>1987</h2>
+          <h2> Year - 1987 - 1988</h2>
           <p>
-            The early club days begin at nightclubs such as 'Better Days' and 'Tracks'. Cesar becomes popular for his signature style of voguing, popping, dipping, and spinning with grace and precision. He walks his first ball, the 'Paris is Buring' Ball and wins. Recrutied as the Father of the House of Magnifique, with the blessing of Willi Ninja. He was featured in 'The Village Voice', in the first ever article about the Harlem Drag Ballroom Scene, and principle dancer on 'The Latin Connection' on television.
+            The early club days begin at nightclubs such as 'Better Days' and 'Tracks'. Cesar becomes popular for his signature style of voguing, popping, dipping, and spinning with grace and precision. He walks his first ball, the 'Paris is Buring' Ball and wins for 'Butch Queen Realness' category.
+
+            Recrutied as the Father of the House of Magnifique, with the blessing of Willi Ninja. He was featured in 'The Village Voice', in the first ever article about the Harlem Drag Ballroom Scene, and is aprinciple dancer on 'The Latin Connection' on television.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -263,7 +265,11 @@
         <div class="timeline-content">
           <h2>1989</h2>
           <p>
-            The love.... Toured the world with Malcolm Mclauren. Featured in Pazzo Magazine and Nightlife Magazine. Made cameos in 'Paris is Burning' and 'The House of Tres' documentary. He was also the first time choreographer for Miss Continental USA contestants competing in Chicago.
+            Ceasr competes in 'The Love Ball', a AIDS fundraising event run by Susanne Bartsch.
+             Tours the world with Malcolm Mclauren. Featured in 'Pazzo Magazine' and 'Nightlife Magazine'. 
+
+             Makes apperances in 'Paris is Burning' and 'The House of Tres' documentaries. He is also the first time choreographer for contestants competing in 
+             Miss Continental USA.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -285,9 +291,9 @@
         </div>
 
         <div class="timeline-content right">
-          <h2>1990</h2>
+          <h2>Year 1990</h2>
           <p>
-            Stays activce in Ballroom scene.
+            Cesar stays active in the Ballroom scene, competing in catergories such as'New Wave vs Punk Rock', "Futuristic Bizzare", 'Hair Couture', 'Butch Queen Realness', 'Designer's Delight', and 'Butch Queen Runway'.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -308,7 +314,7 @@
         <div class="timeline-content">
           <h2>1991</h2>
           <p>
-            Presented with the Marcel Christian Legend Award.
+            Cesar is presented with the Marcel Christian Legend Award.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -333,7 +339,7 @@
         <div class="timeline-content">
           <h2>1993</h2>
           <p>
-            Walked and won many balls. Began to model and dance professionally. Decided to focus on a career in research and left the ballroom scene.
+            Walked and won many balls. Began to model and dance professionally. Decided to focus on a career in behavorial science research to work with the high risk drug using populations and left the ballroom scene.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -357,7 +363,8 @@
         <div class="timeline-content right">
           <h2>1994 </h2>
           <p>
-            Carmen Electra, K7 music video, and Toni Braxton Video.
+            Cesar is principle musician, actor, and dancer in
+            musical videos with Carmen Electra, K7, and Toni Braxton.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -378,7 +385,7 @@
         <div class="timeline-content">
           <h2>1995</h2>
           <p>
-           Enrolls in professional dance classes.
+           Cesar joins agencies like Noir and Mega Management and enrolls in professional dance classes.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -444,10 +451,9 @@
       </div>
 
         <div class="timeline-content">
-          <h2>2010</h2>
+          <h2>2010 - 2011</h2>
           <p>
-            Taught first vogue class at Peridance.
-            Began working in the wardrobe department at Alvin Ailey. 
+            Cesar teaches first Vogue class at Peridance and begins working in the wardrobe department at Alvin Ailey. 
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -494,7 +500,7 @@
         <div class="timeline-content right">
           <h2>2014</h2>
           <p>
-            Recieves the 'Red Era of Ballroom Icon Award'. Teaches first offical Vogue class at Alvin Ailey. Travels the world and teaches workshops in Berlin, Sao Paulo, and the Dominican Republic.
+            Recieves the 'Red Era of Ballroom Icon Award'. Teaches first offical Vogue class at Alvin Ailey and becomes an offical faculty member at the Ailey Extension. Travels the world and teaches workshops in Berlin, Sao Paulo, and the Dominican Republic.
           </p>
           <a href="#" class="btn">button</a>
         </div>
@@ -516,6 +522,10 @@
           <h2>2015</h2>
           <p>
             Recieved the 'Heritage Gatekeeper Award' and the 'House of Infinity Paved the Way Award'
+            
+            Cesar becomes posing and runway coach for the 'Simply B' UK campaign [link].
+
+            Cesar is principle Vogue Dancer for an Original Netflix Series called 'Get Down', directed by Baz Luhrmann.
           </p>
           <a href="#" class="btn">button</a>
         </div>
